# talos-gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  bootstrap.py  docker-compose.db.yml  main.py  mock_upstream.py  pyproject.toml  requirements.txt  verify_storage.py  verify_ws.py  verify_ws_placeholder.py
.agent/: README.md
.agent/agents/design/: brand-guardian.md  ui-designer.md  ux-researcher.md  visual-storyteller.md  whimsy-injector.md
.agent/agents/engineering/: ai-engineer.md  backend-architect.md  devops-automator.md  frontend-developer.md  mobile-app-builder.md  rapid-prototyper.md
.agent/agents/marketing/: app-store-optimizer.md  content-creator.md  growth-hacker.md  instagram-curator.md  reddit-community-builder.md  tiktok-strategist.md  twitter-engager.md
.agent/agents/product/: feedback-synthesizer.md  sprint-prioritizer.md  trend-researcher.md
.agent/agents/project-management/: experiment-tracker.md  project-shipper.md  studio-producer.md
.agent/agents/studio-operations/: analytics-reporter.md  finance-tracker.md  infrastructure-maintainer.md  legal-compliance-checker.md  (+1 more)
.agent/workflows/: README.md  pending-features.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/wiki/: Architecture.md
scripts/: cleanup.sh  start.sh  test.sh  version_sync.py
src/: auth.py  config.py
src/adapters/: postgres_store.py
src/handlers/: stream.py
src/routers/: admin.py  mcp.py
src/stream/: manager.py  session.py  types.py
tests/: test_basic.py  test_sdk_integration.py
(+10 files in other folders)
