[project]
name = "talos-gateway"
version = "3.3.4"
description = "Talos Protocol API Gateway"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "talos-sdk-py @ git+https://github.com/talosprotocol/talos-sdk-py.git"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
